--- a/scripts/3.1_figures.Rmd
+++ b/scripts/3.1_figures.Rmd
@@ -16,10 +16,10 @@ source("")
 
 ```{r load-data}
 # for use on cluster:
-p_dat <- "scratch/network/clc6/abandonment_trajectories/dat_derived/"
-p_dat_derived <- "scratch/network/clc6/abandonment_trajectories/dat_derived/"
+p_dat <- "scratch/network/clc6/abandonment_trajectories/data_derived/"
+p_dat_derived <- "scratch/network/clc6/abandonment_trajectories/data_derived/"
 p_output <- paste0("scratch/network/clc6/abandonment_trajectories/output/")
-
+list.files(p_dat_derived)
 
 
 # Land use class codes:
@@ -35,10 +35,6 @@ bs <- brick(paste0(p_dat, "Abandonment/belarus_small.tif"))
 s <- brick(paste0(p_dat, "Abandonment/shaanxi.tif"))
 b <- brick(paste0(p_dat_derived, "belarus.tif")) # merged version
 
-names(s)
-names(b)
-# update names
-
 # age
 s_age_r <- brick(paste0(p_dat_derived, "shaanxi_age.tif"))
 b_age_r <- brick(paste0(p_dat_derived, "belarus_age.tif"))
@@ -53,7 +49,10 @@ names(b) <- paste0("y", 1987:2017)
 names(s_age_r) <- paste0("y", 1987:2017)
 names(b_age_r) <- paste0("y", 1987:2017)
 
-# data.tables
+
+
+
+# -------------------------- data.tables --------------------------- #
 b_age <- fread(input = paste0(p_dat_derived, "belarus_age.csv"))
 names(b_age)
 s_age <- fread(input = paste0(p_dat_derived, "shaanxi_age.csv"))
@@ -74,42 +73,6 @@ b_dt <- fread(input = paste0(p_dat_derived, "belarus.csv")) # caution - huge fil
 
 
 ```{r simple-plots}
-# define color palette for plotting:
-# 1. Non-veg
-# 2. Woody veg
-# 3. Crop
-# 4. Grassland
-plot_cols <- data.frame(
-  color = c("gray80", # gray, 1. Non-veg
-            terrain.colors(9)[1], # dark green, 2. Woody veg
-            terrain.colors(9)[5], # gold, 3. Crop
-            terrain.colors(9)[3] # light green, 4. Grassland
-               ),
-  name = c("1. Non-veg", "2. Woody veg", "3. Crop", "4. Grassland"),
-  breaks = c(1, 2, 3, 4))
-
-plot_cols_new <- c("gray80", # gray, 1. Non-veg
-               terrain.colors(9)[5], # gold, 2 (formerly 3) Crop
-               terrain.colors(9)[3], # light green, 3 (formerly 4) Grassland
-               terrain.colors(9)[1]  # dark green, 4 (formerly 2) Woody veg
-               )
-
-plot_breaks <- c(0, 1, 2, 3, 4)
-
-# show_col(terrain.colors(20))
-# show_col(topo.colors(20))
-# show_col(cm.colors(20))
-# 
-# show_col(plot_cols)
-# show_col(plot_cols[c(1, 3, 2)])
-
-
-show_col(plot_cols) # (topleft = 1, topright = 2, bottomleft = 3, bottomright = 4)
-# gray,         1. Non-veg
-# dark green,   2. Woody veg
-# gold,         3. Crop
-# light green,  4. Grassland
-
 
 
 # -------------------------- plot raw data --------------------------- #
@@ -177,6 +140,96 @@ s_max_length_distill <- s_max_length[, .(freq = .N), by = max_length]
 s_max_length_distill[, site := "shaanxi"]
 max_length_distill <- rbind(b_max_length_distill, s_max_length_distill)
 
+
+```
+
+```{r histograms}
+# plot histograms
+# beware... because of the way the bins are determined, the default histogram automatically lumps 1 and 2 together. better to first distill the data and use ggplot 
+hist(s_length[[1]], main = "Histogram of Length of Time Abandoned \n Shaanxi/Shanxi Provinces, China", xlab = "Time (years)")
+
+hist(b_length[[1]])
+
+hist(length_all[site == "shaanxi", length], main = "Histogram of Abandonment Period Lengths \n Shaanxi/Shanxi Provinces, China", xlab = "Time (years)")
+
+hist(length_all[site == "belarus", length], main = "Histogram of Abandonment Period Lengths \n Belarus/Russia", xlab = "Time (years)")
+
+hist(b_length[[1]], main = "Histogram of Abandonment Period Lengths \n Belarus/Russia", xlab = "Time (years)")
+toc()
+
+hist(b_length[[1]], main = "right = TRUE")
+hist(b_length[[1]], right = FALSE, main = "right = FALSE")
+
+
+
+# ggplots
+# both site histograms
+distill == length_distill
+max_distill == max_length_distill
+
+
+dat_mean_length
+
+length_plot <- ggplot(data = length_distill) + 
+  labs(title = "Histogram of time abandoned across all individual periods of abandonment") +
+  xlab("Time abandoned (years)") + ylab(expression("Count  (10"^{6}*" pixels)")) +
+  geom_col(mapping = aes(x = length, y = freq/(10^6)), fill = "gray50") +
+  facet_grid(rows = vars(site), scales = "free") +
+  geom_vline(xintercept=5, linetype="dashed", 
+             color = "red", size = 0.75) +
+  # geom_vline(xintercept = dat_mean_length$mean_length, linetype="dashed", color = "pink", size = 0.75,
+  #            show.legend = TRUE, le) +
+  geom_vline(xintercept=20, linetype="dashed", color = "forest green", size = 0.75) +
+  theme_classic()
+
+
+
+class(max_length_distill)
+
+max_length_distill[max_length > 0,]
+# max_length
+max_length_plot <- ggplot(data = max_length_distill[max_length > 0]) + 
+  labs(title = "Histogram of maximum time abandoned per pixel") +
+  xlab("Maximum time abandoned (years)") + ylab(expression("Count  (10"^{6}*" pixels)")) + 
+  geom_col(mapping = aes(x = max_length, y = freq/(10^6)), fill = "gray50") +
+  facet_grid(rows = vars(site), scales = "free") +
+  geom_vline(xintercept=5, linetype="dashed", 
+             color = "red", size = 0.75) +
+  geom_vline(xintercept=20, linetype="dashed", color = "forest green", size = 0.75) +
+  theme_classic()
+
+max_length_distill
+
+length_plot
+max_length_plot
+
+dat_mean_length
+
+
+
+# just belarus
+ggplot(data = b_distill) + 
+  geom_col(mapping = aes(x = length, y = freq), fill = "black") +
+  theme_classic()
+
+ggplot(data = b_length, aes(length)) + 
+  geom_histogram() +
+  theme_classic() # took forever!! Beware...
+```
+
+```{r save-age-histograms}
+
+# all lengths
+png(filename = paste0(p_output, "plots/length_hist.png"), 
+    width = 7, height = 5, units = "in", res = 400)
+print(length_plot)
+dev.off()
+
+# max lengths
+png(filename = paste0(p_output, "plots/max_length_hist.png"), 
+    width = 7, height = 5, units = "in", res = 400)
+print(max_length_plot)
+dev.off()
 
 ```
 
@@ -374,83 +427,7 @@ cc_save_plot_area_by_age_class(input_list = persistence_list_s,
 ```
 
 
-```{r histograms}
-# plot histograms
-# beware... because of the way the bins are determined, the default histogram automatically lumps 1 and 2 together. better to first distill the data and use ggplot 
-hist(s_length[[1]], main = "Histogram of Length of Time Abandoned \n Shaanxi/Shanxi Provinces, China", xlab = "Time (years)")
 
-hist(b_length[[1]])
-
-hist(length_all[site == "shaanxi", length], main = "Histogram of Abandonment Period Lengths \n Shaanxi/Shanxi Provinces, China", xlab = "Time (years)")
-
-hist(length_all[site == "belarus", length], main = "Histogram of Abandonment Period Lengths \n Belarus/Russia", xlab = "Time (years)")
-
-hist(b_length[[1]], main = "Histogram of Abandonment Period Lengths \n Belarus/Russia", xlab = "Time (years)")
-toc()
-
-hist(b_length[[1]], main = "right = TRUE")
-hist(b_length[[1]], right = FALSE, main = "right = FALSE")
-
-
-
-# ggplots
-# both site histograms
-dat
-length_plot <- ggplot(data = distill) + 
-  labs(title = "Histogram of time abandoned across all individual periods of abandonment") +
-  xlab("Time abandoned (years)") + ylab(expression("Count  (10"^{6}*" pixels)")) +
-  geom_col(mapping = aes(x = length, y = freq/(10^6)), fill = "gray50") +
-  facet_grid(rows = vars(site), scales = "free") +
-  geom_vline(xintercept=5, linetype="dashed", 
-             color = "red", size = 0.75) +
-  geom_vline(xintercept=20, linetype="dashed", color = "dark green", size = 0.75) +
-  theme_classic()
-
-
-# max_length
-max_length_plot <- ggplot(data = max_distill) + 
-  labs(title = "Histogram of maximum time abandoned per pixel") +
-  xlab("Maximum time abandoned (years)") + ylab(expression("Count  (10"^{6}*" pixels)")) + 
-  geom_col(mapping = aes(x = max_length, y = freq/(10^6)), fill = "gray50") +
-  facet_grid(rows = vars(site), scales = "free") +
-  geom_vline(xintercept=5, linetype="dashed", 
-             color = "red", size = 0.75) +
-  geom_vline(xintercept=20, linetype="dashed", color = "dark green", size = 0.75) +
-  theme_classic()
-
-
-length_plot
-max_length_plot
-dat
-
-
-
-
-# just belarus
-ggplot(data = b_distill) + 
-  geom_col(mapping = aes(x = length, y = freq), fill = "black") +
-  theme_classic()
-
-ggplot(data = b_length, aes(length)) + 
-  geom_histogram() +
-  theme_classic() # took forever!! Beware...
-```
-
-```{r save-age-histograms}
-
-# all lengths
-png(filename = paste0(p_output, "plots/length_hist.png"), 
-    width = 7, height = 5, units = "in", res = 400)
-print(length_plot)
-dev.off()
-
-# max lengths
-png(filename = paste0(p_output, "plots/max_length_hist.png"), 
-    width = 7, height = 5, units = "in", res = 400)
-print(max_length_plot)
-dev.off()
-
-```
 
 
 
@@ -500,11 +477,29 @@ cc_save_plots_master(land_cover_dt = s_dt,
   abn_age_dt = s_age, 
   land_cover_raster = s$y2017,
   subtitle = "Shaanxi/Shanxi Provinces, China",
-  outfile_label = "_s_test"
+  outfile_label = "_s"
   )
 toc()
 
+load(file = paste0(p_output, "abn_dat_products_s.rds"), verbose = TRUE)
+
+# how do i deal with different thresholds of abandonment?
+
 ```
+
+```{r load-files}
+load(file = paste0(p_output, "abn_dat_products_s.rds"), verbose = TRUE)
+# caution, will have to rename them!
+area_s <- area
+persistence_list_s <- persistence_list
+abn_area_change_s <- abn_area_change
+
+load(file = paste0(p_output, "abn_dat_products_b.rds"), verbose = TRUE)
+area_b <- area
+persistence_list_b <- persistence_list
+abn_area_change_b <- abn_area_change
+```
+
 
 ```{r belarus-plots}
 # Belarus:
